fix geprobeert